--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ main section:nth-of-type(1) h1{
     margin: 0 auto;
     border-bottom: 1px solid white;
     border-top: 1px solid white;
+    box-shadow: 0px 0px 36px 7px rgba(0,0,0,0.75);
 }
 
 .container-events .scroll-slides {
@@ -97,8 +98,10 @@ main section:nth-of-type(1) h1{
     margin: 0 auto;
     display: flex;
     align-items: center;
-    border: 1px solid black;
-    padding: 1rem 0
+    border: 1px solid rgba(243, 243, 243, 0.164);
+    padding: 1rem 0;
+    border-radius: 25px;
+    box-shadow:  11px 11px 34px #2e2e2e
 }
 
 .container-events .container-slides {
@@ -114,6 +117,9 @@ main section:nth-of-type(1) h1{
     min-width: 400px;
     max-width: 400px;
     min-height: 235px;
-    background: rgb(133, 133, 133);
-    border: 2px solid black;
+    border-radius: 25px;
+    padding: 1rem;
+    background: rgb(19, 123, 141);
+    color: white;
+    border: 2px solid rgba(218, 218, 218, 0.459);
 }
