--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ header {
 }
 
 .logo img {
-    width: 100%
+    width: 100%;
+    filter: drop-shadow(0 0 0.75rem rgb(221, 220, 220));
 }
 
 nav {
@@ -86,10 +87,38 @@ main section:nth-of-type(1) h1{
     background: white;
     background: transparent;
     padding: 5rem;
-    margin: 0 auto;
+    margin: 3rem 0;
     border-bottom: 1px solid white;
     border-top: 1px solid white;
     box-shadow: 0px 0px 36px 7px rgba(0,0,0,0.75);
+}
+
+.container-events .div-buttons{
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.container-events .div-buttons button{
+    transition: .2s;
+    padding: 1rem 3rem;
+    border: none;
+    background: rgba(255, 255, 255, 0.349);
+    border-radius: 1rem;
+    border: 2px solid transparent;
+    backdrop-filter: sepia(90%);
+    font-size: 1.2rem;
+    font-weight: bolder;
+    box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.75);
+}
+
+.container-events .div-buttons button:hover{
+    background: rgba(255, 255, 255, 0.61);
+    cursor: pointer;
+    border: 2px solid white;
+    box-shadow: 0px 0px 16px 5px rgba(0,0,0,0.75);
 }
 
 .container-events .scroll-slides {
@@ -109,7 +138,7 @@ main section:nth-of-type(1) h1{
     display: flex;
     width: 100%;
     gap: 2rem;
-    transition: 1s;
+    transition: .5s;
 }
 
 .container-events .container-slides div {
@@ -122,4 +151,69 @@ main section:nth-of-type(1) h1{
     background: rgb(19, 123, 141);
     color: white;
     border: 2px solid rgba(218, 218, 218, 0.459);
+}
+
+@keyframes widthing {
+    from {
+        transform: translateX(0px)
+    }
+
+    to {
+        transform: translateX(100%);
+    }
+}
+
+@media screen and (max-width: 480px){
+    header {
+        background: var(--black);
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .logo {
+        max-width: 100px;
+        margin: 0 1rem
+    }
+    
+    .logo img {
+        width: 100%;
+        filter: drop-shadow(0 0 0.75rem rgb(221, 220, 220));
+    }
+    
+    nav {
+        position: fixed;
+        right: 0;
+        display: flex;
+        align-items: flex-start;
+        background: var(--black);
+        height: 100vh;
+        z-index: 1;
+        transform-origin: right;
+        animation: widthing .5s ease 1;
+    }
+    
+    nav ul{
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        gap: 1rem;
+        margin: 0 3rem;
+        height: 60%;
+        justify-content: space-around;
+    }
+
+    nav ul li{
+        border-bottom: 2px solid white
+    }
+    
+    nav ul li a {
+        transition: .2s;
+        text-decoration: none;
+        font-size: 2rem;
+        color: white
+    }
+    
+    nav ul li a:hover {
+        color: rgb(116, 116, 116)
+    }
 }
