--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 :root {
     --black: #252523
 }
@@ -12,60 +13,107 @@
 body {
     display: grid;
     min-height: 100vh;
-    grid-template-rows: 10% 1fr 10%;
+    grid-template-rows: auto 1fr auto;
 }
 
 header {
-    background: var(--black);
     display: flex;
+    background: var(--black);
     justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    z-index: 1;
+    width: 100vw;
 }
 
-.logo {
-    max-width: 100px;
+header .logo img {
+    width: 90%
+}
+
+header .logo {
+    display: grid;
+    height: 100%;
+    max-width: 80px;
+    place-items: center;
+}
+
+.nav {
+    display: flex
+}
+
+#header-icon {
     margin: 0 1rem
 }
 
-.logo img {
-    width: 100%;
-    filter: drop-shadow(0 0 0.75rem rgb(221, 220, 220));
+header nav {
+    z-index: 1;
+    overflow: hidden;
+    display: flex;
+    width: 0;
+    left: 0;
+    top: 0;
+    position: fixed;
+    background: var(--black);
+    height: 100vh;
+    align-items: center;
+    transform-origin: left;
+    transition: 1s ease;
 }
 
-nav {
-    display: flex;
-    align-items: last baseline;
+.more-width {
+    width: 50%;
 }
 
-nav ul{
-    display: flex;
+nav ul {
     list-style: none;
-    gap: 1rem;
-    margin: 1rem 1rem
+    width: 100%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
-nav ul li a {
-    transition: .2s;
+nav ul li {
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+}
+
+nav ul li div{
+    width: 100%;
+}
+
+nav ul li div img{
+    width: 100%;
+}
+
+.x-menu {
+    width: 20%;
+}
+
+
+nav ul a {
+    display: inline-block;
     text-decoration: none;
-    font-size: 2rem;
-    color: white
-}
-
-nav ul li a:hover {
-    color: rgb(116, 116, 116)
+    color: white;
+    padding: 1rem 2rem;
+    text-transform: uppercase;
+    font-weight: bolder;
+    letter-spacing: .3rem;
+    font-size: 1.2rem;
 }
 
 main {
     display: flex;
     flex-direction: column;
-    background: #3a3a38 url(./assets/bg-drinks.jpg) no-repeat;
-    background-size: 100%;
+    background: #3a3a38 url(./assets/bg-drinks.jpg) no-repeat center;
+    background-size: cover;
 }
 
 main section {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    border: 2px solid black;
 }
 
 main section:nth-of-type(1){
@@ -80,19 +128,26 @@ main section:nth-of-type(1) h1{
     letter-spacing: .8rem;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100%
+}
+
 .container-events {
     gap: 1rem;
     width: 100%;
+    height: 100%;
     backdrop-filter: blur(10px);
     background: white;
     background: transparent;
-    padding: 5rem;
-    margin: 3rem 0;
+    padding: 5rem 0;
+    margin: 2rem 0;
     border-bottom: 1px solid white;
     border-top: 1px solid white;
     box-shadow: 0px 0px 36px 7px rgba(0,0,0,0.75);
 }
-
+/*
 .container-events .div-buttons{
     padding: 1rem;
     display: flex;
@@ -152,68 +207,39 @@ main section:nth-of-type(1) h1{
     color: white;
     border: 2px solid rgba(218, 218, 218, 0.459);
 }
+*/
 
-@keyframes widthing {
-    from {
-        transform: translateX(0px)
-    }
-
-    to {
-        transform: translateX(100%);
-    }
+footer {
+    background-color: var(--black); 
+    padding: 1rem;
+    text-align: center;
+    color: #fff;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-@media screen and (max-width: 480px){
-    header {
-        background: var(--black);
-        display: flex;
-        justify-content: space-between;
-    }
-    
-    .logo {
-        max-width: 100px;
-        margin: 0 1rem
-    }
-    
-    .logo img {
-        width: 100%;
-        filter: drop-shadow(0 0 0.75rem rgb(221, 220, 220));
-    }
-    
-    nav {
-        position: fixed;
-        right: 0;
-        display: flex;
-        align-items: flex-start;
-        background: var(--black);
-        height: 100vh;
-        z-index: 1;
-        transform-origin: right;
-        animation: widthing .5s ease 1;
-    }
-    
-    nav ul{
-        display: flex;
-        flex-direction: column;
-        list-style: none;
-        gap: 1rem;
-        margin: 0 3rem;
-        height: 60%;
-        justify-content: space-around;
-    }
+.footer-content {
+    display: flex;
+    gap: .5rem;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+}
 
-    nav ul li{
-        border-bottom: 2px solid white
-    }
-    
-    nav ul li a {
-        transition: .2s;
-        text-decoration: none;
-        font-size: 2rem;
-        color: white
-    }
-    
-    nav ul li a:hover {
-        color: rgb(116, 116, 116)
-    }
+.contact-info {
+    text-align: left;
+}
+
+.social-links {
+    text-align: right;
+}
+
+
+footer a {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #fff;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
