--- a/style.css
+++ b/style.css
@@ -113,7 +113,6 @@ main section {
     display: flex;
     flex-direction: column;
     width: 100vw;
-    border: 2px solid black;
 }
 
 main section:nth-of-type(1){
@@ -128,6 +127,13 @@ main section:nth-of-type(1) h1{
     letter-spacing: .8rem;
 }
 
+.events {
+    display: flex;
+    height: 25%;
+    align-items: last baseline;
+    justify-content: center;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -135,19 +141,22 @@ main section:nth-of-type(1) h1{
 }
 
 .container-events {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 1rem;
     width: 100%;
     height: 100%;
     backdrop-filter: blur(10px);
     background: white;
     background: transparent;
-    padding: 5rem 0;
     margin: 2rem 0;
     border-bottom: 1px solid white;
     border-top: 1px solid white;
     box-shadow: 0px 0px 36px 7px rgba(0,0,0,0.75);
 }
-/*
+
 .container-events .div-buttons{
     padding: 1rem;
     display: flex;
@@ -177,14 +186,14 @@ main section:nth-of-type(1) h1{
 }
 
 .container-events .scroll-slides {
-    width: calc(400px + 2rem);
-    overflow: hidden;
-    margin: 0 auto;
     display: flex;
     align-items: center;
-    border: 1px solid rgba(243, 243, 243, 0.164);
+    max-width: 100%;
+    overflow: hidden;
+    margin: 0 auto;
+    border-bottom: 1px solid rgba(243, 243, 243, 0.164);
+    border-top: 1px solid rgba(243, 243, 243, 0.164);
     padding: 1rem 0;
-    border-radius: 25px;
     box-shadow:  11px 11px 34px #2e2e2e
 }
 
@@ -197,17 +206,20 @@ main section:nth-of-type(1) h1{
 }
 
 .container-events .container-slides div {
-    margin: 1rem;
-    min-width: 400px;
-    max-width: 400px;
+    min-width: 100vw;
     min-height: 235px;
-    border-radius: 25px;
     padding: 1rem;
-    background: rgb(19, 123, 141);
+    background: transparent;
     color: white;
-    border: 2px solid rgba(218, 218, 218, 0.459);
+    border-top: 2px solid rgba(218, 218, 218, 0.459);
+    border-bottom: 2px solid rgba(218, 218, 218, 0.459);
 }
-*/
+
+.container-events .container-slides div img{
+    width: 100%;
+    filter: drop-shadow(5px 5px 5px #1b1b1bbd);
+}  
+
 
 footer {
     background-color: var(--black); 
