--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ main section:nth-of-type(1){
 main section:nth-of-type(1) h1{
     text-align: center;
     font-size: 4rem;
-    color: white;
+    color: rgb(255, 196, 0);
     text-shadow: 5px 5px 2px rgba(0,0,0,0.55);
     letter-spacing: .8rem;
 }
