--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ main section:nth-of-type(1) h1{
 
 .events {
     display: flex;
-    height: 25%;
+    height: calc(50%);
     align-items: last baseline;
     justify-content: center;
 }
