--- a/style.css
+++ b/style.css
@@ -235,17 +235,19 @@ main section h1{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    gap: 1rem
 }
 
 .container-drinks .card {
     display: flex;
     flex-direction: column;
     padding: 1rem .5rem;
-    background: rgba(255, 199, 95, 0.144);
+    background: rgba(107, 90, 59, 0.342);
     backdrop-filter: blur(10px);
     border-bottom: 1px solid rgba(255, 255, 255, 0.548);
     border-top: 1px solid rgba(255, 255, 255, 0.548);
     transition: height .5s ease;
+    box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.75);
 }
 
 .container-drinks .card .img {
@@ -264,7 +266,7 @@ main section h1{
     font-size: 2rem;
     display: flex;
     height: 100%;
-    align-items: center
+    align-items: center;
 }
 
 .container-drinks .card .container-1{
@@ -315,6 +317,7 @@ main section h1{
     padding: .5rem;
     border-radius: 1rem;
     font-size: 1.2rem;
+    box-shadow: 0px 0px 15px 3px rgba(0,0,0,0.75);
 }
 
 .container-drinks .card .desc .container-desc div:nth-child(3){
