--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 :root {
     --black: #252523;
+    --yellow: #ffc400;
     scroll-behavior: smooth;
 }
 
@@ -9,6 +10,11 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+html {
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
@@ -131,7 +137,7 @@ main section:nth-of-type(2){
 main section h1{
     text-align: center;
     font-size: 4rem;
-    color: rgb(255, 196, 0);
+    color: var(--yellow);
     text-shadow: 5px 5px 2px rgba(0,0,0,0.55);
     letter-spacing: .8rem;
 }
@@ -324,7 +330,6 @@ main section h1{
     font-style: italic;
 }
 
-
 footer {
     background-color: var(--black); 
     padding: 1rem;
@@ -339,6 +344,21 @@ footer {
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
+}
+
+.address {
+    width: 100%
+}
+
+.address iframe {
+    max-width: 100%;
+    max-height: 250px;
+}
+
+.address p {
+    text-align: center;
+    font-size: 110%;
+    font-weight: bolder;
 }
 
 .contact-info {
@@ -362,4 +382,75 @@ footer a:hover {
 
 #end{
     text-decoration: underline;
+}
+
+.sobre {
+    max-width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 11vh 0 1vh;
+    gap: 1rem
+}
+
+.sobre .container-sobre {
+    width: 90%;
+    border: 4px dashed var(--yellow);
+    border-radius: 10px;
+    padding: 1rem;
+}
+
+.sobre h2 {
+    color: var(--yellow);
+    font-size: 200%;
+    margin: 1rem 0;
+    text-align: center;
+    text-shadow: 3px 3px 2px rgba(0,0,0,0.55);
+}
+
+.sobre ul {
+    list-style: none;
+}
+
+.sobre ul li div:nth-of-type(1){
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 1rem;
+    color: rgb(199, 199, 199);
+    text-shadow: 3px 3px 2px rgba(0,0,0,0.55);
+}
+
+.sobre ul li {
+    border-bottom: 4px dashed var(--yellow)
+}
+
+.sobre ul li div:nth-of-type(1) div{
+    flex-direction: row;
+    justify-content: center;
+}
+.sobre p {
+    color: rgb(209, 209, 209);
+    text-align: justify;
+    margin: .5rem 0;
+}
+
+.sobre ul li div:nth-of-type(1) h3 {
+    margin: 1rem 0 .5rem
+}
+
+.sobre ul li div:nth-of-type(1) img {
+    width: 20%;
+}
+
+
+.img-visao {
+    display: flex;
+    justify-content: center;
+}
+
+.img-visao img{
+    width: 20%
 }
