--- a/style.css
+++ b/style.css
@@ -438,7 +438,8 @@ footer a:hover {
 }
 
 .sobre ul li div:nth-of-type(1) h3 {
-    margin: 1rem 0 .5rem
+    margin: 1rem 0 .5rem;
+    text-align: center;
 }
 
 .sobre ul li div:nth-of-type(1) img {
