--- a/style.css
+++ b/style.css
@@ -13,8 +13,6 @@
 }
 
 html {
-    max-width: 100vw;
-    overflow-x: hidden;
 }
 
 body {
@@ -212,7 +210,7 @@ main section h1{
     letter-spacing: .8rem;
 }
 
-.events {
+.head-section {
     display: flex;
     min-height: 20vh;
     align-items: last baseline;
@@ -400,6 +398,69 @@ main section h1{
     font-style: italic;
 }
 
+@media screen and (min-width: 480px) {
+    html {
+        max-width: none;
+        overflow-x: auto;
+    }
+    main {
+        display: flex;
+        flex-direction: row;
+        background: #3a3a38 url(./assets/bg-drinks.jpg) no-repeat center;
+        background-size: cover;
+        justify-content: space-between;
+    }
+    
+    main section {
+        width: 50%;
+        background: transparent;
+    }
+    
+    main section:nth-of-type(1){
+        background: transparent;
+    }
+    
+    main section:nth-of-type(2){
+        background: transparent;
+    }
+    
+    .head-section {
+        min-height: 0;
+    } 
+    
+    .container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        max-height: 100vh
+    }
+    
+    .container-events {
+        width: 50%;
+        height: auto;
+        margin: 1rem auto;
+    }
+    
+    .container-events .div-buttons{
+        justify-content: space-between;
+        width: 100%;
+        gap: 0;
+    }
+    
+    .container-events .container-slides div {
+        min-width: 100%;
+    }
+
+    .container-drinks {
+        min-height: auto;
+        margin: 1rem auto;
+    }
+    
+    .container-drinks .card .img {
+        max-width: 250px
+    }
+}
+
 footer {
     background-color: var(--black); 
     padding: 1rem;
@@ -452,6 +513,66 @@ footer a:hover {
 
 #end{
     text-decoration: underline;
+}
+
+.insta {
+    display: none;
+}
+
+@media screen and (min-width: 480px) {
+    .footer-content {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        justify-content: space-evenly;
+    }
+    
+    .address {
+        width: auto
+    }
+    
+    .address iframe {
+        max-width: 100%;
+        max-height: 250px;
+    }
+    
+    .address p {
+        text-align: left;
+    }
+
+    .footer-content h4, .footer-content img {
+        display: none
+    }
+    
+    footer a:hover {
+        text-decoration: underline;
+    }
+
+    .contact-info {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        height: 100%;
+        font-size: 150%;
+    }
+
+    .insta {
+        display: flex;
+        flex-direction: column;
+        font-size: 150%;
+    }
+
+    .insta h4, .insta img{
+        display: block;
+    }
+
+    .insta img{
+        margin: 2rem auto
+    }
+
+    .direitos {
+        margin: 2rem 0 0;
+        text-align: right;
+    }
 }
 
 .sobre {
