--- a/style.css
+++ b/style.css
@@ -463,115 +463,92 @@ main section h1{
 
 footer {
     background-color: var(--black); 
-    padding: 1rem;
-    text-align: center;
+    padding: 1rem 0 0;
     color: #fff;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.footer-content {
-    display: flex;
-    gap: .5rem;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-}
-
-.address {
-    width: 100%
-}
-
-.address iframe {
-    max-width: 100%;
-    max-height: 250px;
-}
-
-.address p {
-    text-align: center;
-    font-size: 110%;
-    font-weight: bolder;
-}
-
-.contact-info {
-    text-align: left;
-}
-
-.social-links {
+.footer-footer {
+    background-color: rgb(51, 51, 51);
+    padding: 1rem;
     text-align: right;
 }
 
+.footer-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
+    max-width: 70%;
+    margin: 0 auto;
+    padding: 1rem
+}
 
-footer a {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #fff;
+.container-footer h2{
+    text-align: center;
+}
+
+.container-footer {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.container-footer a {
+    color: white;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 125%;
     text-decoration: none;
+    border-radius: 1rem;
+    transition: .5s;
 }
 
-footer a:hover {
-    text-decoration: underline;
+.container-footer a:hover {
+    scale: 1.1;
+    color: black;
+    background: white
 }
 
-#end{
-    text-decoration: underline;
+.address iframe {
+    height: 100%;
 }
 
-.insta {
-    display: none;
+.address a {
+    padding: .5rem;
 }
 
-@media screen and (min-width: 480px) {
-    .footer-content {
-        display: grid;
-        grid-template-columns: auto auto auto;
-        justify-content: space-evenly;
-    }
-    
-    .address {
-        width: auto
-    }
-    
-    .address iframe {
+.social a svg {
+    min-width: 50px;
+}
+
+.social {
+    padding: 1rem;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.social:nth-of-type(1) {
+    background: #228322;
+}
+
+.social:nth-of-type(2) {
+    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%)
+}
+
+.social:nth-of-type(3) {
+    background: #5b5bec;
+}
+
+.citacoes p {
+    font-style: italic;
+    font-size: 110%;
+}
+
+@media screen and (max-width: 480px) {
+    .footer-content{
         max-width: 100%;
-        max-height: 250px;
-    }
-    
-    .address p {
-        text-align: left;
-    }
-
-    .footer-content h4, .footer-content img {
-        display: none
-    }
-    
-    footer a:hover {
-        text-decoration: underline;
-    }
-
-    .contact-info {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        height: 100%;
-        font-size: 150%;
-    }
-
-    .insta {
-        display: flex;
-        flex-direction: column;
-        font-size: 150%;
-    }
-
-    .insta h4, .insta img{
-        display: block;
-    }
-
-    .insta img{
-        margin: 2rem auto
-    }
-
-    .direitos {
-        margin: 2rem 0 0;
-        text-align: right;
+        padding: 1rem
     }
 }
 
