--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 }
 
 html {
+    
 }
 
 body {
@@ -220,7 +221,6 @@ main section h1{
 .container {
     display: flex;
     flex-direction: column;
-    height: 100%;
 }
 
 .container-events {
@@ -406,8 +406,8 @@ main section h1{
     main {
         display: flex;
         flex-direction: row;
-        background: #3a3a38 url(./assets/bg-drinks.jpg) no-repeat center;
-        background-size: cover;
+        background: #3a3a38 url(./assets/bg-drinks.jpg) no-repeat;
+        background-size: 120%;
         justify-content: space-between;
     }
     
@@ -432,7 +432,6 @@ main section h1{
         width: 100%;
         display: flex;
         flex-direction: column;
-        max-height: 100vh
     }
     
     .container-events {
